test/expected/regression-http-parser.txt
/scripts/regression-http-parser.js:19
      throw new Error('trace');
      ^

Error: trace
    at IncomingMessage.<anonymous> (/scripts/regression-http-parser.js:19:13)
    at IncomingMessage.g (events.js:286:16)
    at emitOne (events.js:96:13)
    at IncomingMessage.emit (events.js:188:7)
    at IncomingMessage.Readable.read (_stream_readable.js:382:10)
    at flow (_stream_readable.js:762:34)
    at resume_ (_stream_readable.js:744:3)
    at _combinedTickCallback (internal/process/next_tick.js:74:11)
    at process._tickCallback (internal/process/next_tick.js:98:9)
    at resume (_stream_readable.js:731:13)
    at IncomingMessage.Readable.resume (_stream_readable.js:723:5)
    at IncomingMessage.Readable.on (_stream_readable.js:693:12)
    at IncomingMessage.once (events.js:296:8)
    at ClientRequest.<anonymous> (/scripts/regression-http-parser.js:18:9)
    at ClientRequest.g (events.js:286:16)
    at emitOne (events.js:96:13)
    at ClientRequest.emit (events.js:188:7)
    at HTTPParser.parserOnIncomingClient (_http_client.js:472:21)
    at HTTPParser.parserOnHeadersComplete (_http_common.js:105:23)
    at Socket.socketOnData (_http_client.js:361:20)
    at emitOne (events.js:96:13)
    at Socket.emit (events.js:188:7)
    at readableAddChunk (_stream_readable.js:177:18)
    at Socket.Readable.push (_stream_readable.js:135:10)
    at TCP.onread (net.js:542:20)
    at new <anonymous> (_http_common.js:159:16)
    at exports.FreeList.alloc (internal/freelist.js:14:46)
    at tickOnSocket (_http_client.js:533:24)
    at onSocketNT (_http_client.js:574:5)
    at _combinedTickCallback (internal/process/next_tick.js:74:11)
    at process._tickCallback (internal/process/next_tick.js:98:9)
    at ClientRequest.onSocket (_http_client.js:566:11)
    at _http_agent.js:156:11
    at oncreate (_http_agent.js:227:5)
    at Agent.createSocket (_http_agent.js:189:5)
    at Agent.addRequest (_http_agent.js:149:10)
    at new ClientRequest (_http_client.js:158:16)
    at Object.exports.request (http.js:31:10)
    at Object.exports.get (http.js:35:21)
    at Server.<anonymous> (/scripts/regression-http-parser.js:17:8)
    at Server.g (events.js:286:16)
    at emitNone (events.js:86:13)
    at Server.emit (events.js:185:7)
    at emitListeningNT (net.js:1278:10)
    at _combinedTickCallback (internal/process/next_tick.js:71:11)
    at process._tickCallback (internal/process/next_tick.js:98:9)
    at Server._listen2 (net.js:1266:11)
    at listen (net.js:1288:10)
    at net.js:1398:9
    at GetAddrInfoReqWrap.asyncCallback [as callback] (dns.js:65:16)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:84:10)
    at Object.lookup (dns.js:167:19)
    at listenAfterLookup (net.js:1393:20)
    at Server.listen (net.js:1389:5)
    at Object.<anonymous> (/scripts/regression-http-parser.js:15:8)
    at Module._compile (module.js:541:32)
    at Object.Module._extensions..js (module.js:550:10)
    at Module.load (module.js:458:32)
    at tryModuleLoad (module.js:417:12)
    at Function.Module._load (module.js:409:3)
    at Module.runMain (module.js:575:10)
    at run (bootstrap_node.js:352:7)
    at startup (bootstrap_node.js:144:9)
    at bootstrap_node.js:467:3
